Fixes whitespace on modular capfile tab below code

--- a/app/assets/stylesheets/capfiles.css.scss
+++ b/app/assets/stylesheets/capfiles.css.scss
@@ -14,6 +14,9 @@
   left: 0;
   height: auto;
 }
+#module .editor_wrapper{
+  height: 200px;
+}
 #module_editor {
   height: 200px
 }
